# IISc-CapstoneProject-Repo

./: .gitignore  LICENSE  README.md  enterprise_conversational_app_architecture.md
.github/workflows/: auto-assign.yml
common/: .gitignore  Dockerfile.mcp  FILES_CHANGED_SUMMARY.md  PRE_TEST_VALIDATION.md  README-docker.md  Tasks.md  docker-compose.yml  env.example  mcp_server.py  pyproject.toml  run.py  test_catalog_queries.py  test_catalog_registration.py  test_mcp_integration.py  test_shopping_cart.py  test_tool_detection.py  workflow_complete_flow.md  workflow_with_catalog_tools.md
common/embeddings/chroma/: chroma.sqlite3
common/requirements/: base.txt  development.txt
common/scripts/: start_server.py
common/src/cccp/: __init__.py
common/src/cccp/agents/: custom_tool_calling_agent.py  intent_classifier.py  state.py  visualize_workflow.py
common/src/cccp/agents/workflows/nodes/: chat_agent.py  chat_node.py  tool_node.py
common/src/cccp/api/: server.py
common/src/cccp/api/models/: requests.py
common/src/cccp/api/routes/: chat.py
common/src/cccp/convstore/: db_config.py  readme_schema_conversation.txt  schema_conversation.json  storecoversation.py
common/src/cccp/core/: __init__.py  config.py
common/src/cccp/mcp/: __init__.py  client.py
common/src/cccp/models/: __init__.py  base.py  ollama_model.py  phi2_model.py
common/src/cccp/prompts/: README.md  __init__.py  config.py
common/src/cccp/prompts/tool_detection/: __init__.py  v1_basic.py  v2_llama_optimized.py  v3_enhanced.py
common/src/cccp/rag/: embeddings.py  rag_redundant.py  retriever_ollama.py  retriever_unit.py
common/src/cccp/rag/docs/: 01_policy_overview.doc  02_return_eligibility.doc  03_non_returnable_items.doc  04_return_process.doc  05_refund_policy.doc  06_exchange_policy.doc  07_contact_information.doc  customer_return_policy.doc
common/src/cccp/rag/embeddings/chroma/: chroma.sqlite3
common/src/cccp/services/: __init__.py  model_service.py
common/src/cccp/tools/: __init__.py  base.py  registry.py
common/src/cccp/tools/catalog/: __init__.py  catalog_utils.py  get_catalog.py  list_collections.py  search_products.py
common/src/cccp/tools/math/: add.py  multiply.py
common/src/cccp/tools/order/: __init__.py  add_to_cart.py  cart_utils.py  checkout.py  clear_cart.py  get_order.py  place_order.py  remove_from_cart.py  view_cart.py
common/src/cccp/ui/: streamlit_app.py
common/tests/: conftest.py
common/tests/integration/: test_catalog_integration.py  test_shopping_flow_e2e.py
common/tests/unit/: test_catalog_tools.py  test_models.py
common/z_additional_md/: CATALOG_TOOLS_IMPLEMENTATION.md  CHANGES_TOOL_DETECTION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONVERSATION_CONTEXT_LLAMA.md  CRITICAL_FIX_GET_ORDER.md  E2E_TEST_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LLM_TOOL_DETECTION_APPROACH.md  OPENAI_TOOL_CALLING_INTEGRATION.md  ORDER_QUERY_IMPROVEMENTS.md  PHASE_2_COMPLETE.md  PROMPT_STRENGTHENING.md  REGISTRATION_FORM_IMPLEMENTATION.md  SHOPPING_CART_IMPLEMENTATION.md  TEST_IMPROVEMENTS_ORDER_EXTRACTION.md  TROUBLESHOOTING_CATALOG_TOOLS.md  cursor_review_add_py_and_multiply_py_fo.md  streamlit-registration-form.plan.md
individual-pocs/ashish/: 01a_adapters.ipynb
individual-pocs/harish/: streamlit-ui.py
individual-pocs/harish/cccp/: .gitignore  Tasks.md  logging_config.py  start_server.sh  start_ui.sh
individual-pocs/harish/cccp-advanced/: .gitignore  README.md  complete_system_flow.md  install.sh  pyproject.toml  test_ollama.py  workflow_complete_flow.md  workflow_mermaid.md  workflow_structure.txt
individual-pocs/harish/cccp-advanced/requirements/: base.txt  development.txt  production.txt
individual-pocs/harish/cccp-advanced/scripts/: __init__.py  start_ui.py
individual-pocs/harish/server/: requirements.txt
(+33 files in other folders)
